--- a/nucchem/test/make/makefile
+++ b/nucchem/test/make/makefile
@@ -3,11 +3,11 @@ include $(MESA_DIR)/utils/makefile_header
 DSTAR_LIB = ../../../lib
 DSTAR_INC = ../../../include
 
-LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lchem 
+LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lnucchem 
 LOAD_OTHER = -L$(DSTAR_LIB) -lnetJina -L$(MESA_LIB_DIR) -lconst -lutils
 
 TEST = tester
-TEST_OBJS = test_chem.o
+TEST_OBJS = test_nucchem.o
 
 default: install
 
