brought in crust neutrino
need a larger nuclide database for crut work

--- a/neutrino/make/makefile
+++ b/neutrino/make/makefile
@@ -1,7 +1,11 @@
 include $(MESA_DIR)/utils/makefile_header
 
 LIB = libneutrino.a
-LIB_OBJS = neutrino_def.o eval_core_neutrino.o neutrino_lib.o
+LIB_OBJS = 	neutrino_def.o \
+			eval_core_neutrino.o \
+			eval_crust_neutrino.o \
+			neutrino_lib.o
+
 DSTAR_LIB = ../../lib
 DSTAR_INC = ../../include
 
