--- a/conductivity/make/makefile
+++ b/conductivity/make/makefile
@@ -1,7 +1,7 @@
 include $(MESA_DIR)/utils/makefile_header
 
 LIB = libconductivity.a
-LIB_OBJS = conductivity_def.o eval_conductivity.o conductivity_lib.o
+LIB_OBJS = conductivity_def.o eval_conductivity.o eval_core_conductivity.o conductivity_lib.o
 DSTAR_LIB = ../../lib
 DSTAR_INC = ../../include
 
