interface for dStar_crust
routines brought over from atm library.

--- a/dStar_crust/make/makefile
+++ b/dStar_crust/make/makefile
@@ -2,15 +2,17 @@ include $(MESA_DIR)/utils/makefile_header
 
 LIB = libdstar_crust.a
 LIB_OBJS = 	HZ90.o
-
-VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
 DSTAR_INC=../../include
 DSTAR_LIB=../../lib
+
+VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
+
 COMPILE = $(COMPILE_TO_TEST) $(FCfree) -I$(DSTAR_INC)
-COMPILE_FIXED = $(COMPILE_TO_TEST) $(FCfixed) -I$(DSTAR_INC)
 
 %.o:%.f
 	$(COMPILE) $<
+
+default: $(LIB)
 
 $(LIB): $(LIB_OBJS)
 	$(LIB_TOOL) $(LIB) $(LIB_OBJS)
