--- a/NScool/test/make/makefile
+++ b/NScool/test/make/makefile
@@ -2,11 +2,11 @@ include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = ../../../lib
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lnscool
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lsuperfluid -ldstar_eos -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_crust -lsuperfluid -ldstar_eos -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
 DSTAR_INC = ../../../include
 
 TEST = tester
-TEST_OBJS = test_nscool.o
+TEST_OBJS = test_NScool_tov.o
 
 default: install
 
