--- a/NScool/make/makefile
+++ b/NScool/make/makefile
@@ -1,12 +1,12 @@
 include $(MESA_DIR)/utils/makefile_header
 
 LIB = libnscool.a
-LIB_OBJS = 	NScool_crust_tov.o
+LIB_OBJS = NScool_def.o NScool_private_def.o NScool_crust_tov.o NScool_ctrls_io.o NScool_lib.o
 
 VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
 DSTAR_INC=../../include
 DSTAR_LIB=../../lib
-COMPILE = $(COMPILE_TO_TEST) $(FCfree) -I$(DSTAR_INC)
+COMPILE = $(COMPILE_TO_TEST) $(FCfree) -I$(DSTAR_INC) -I../defaults
 COMPILE_FIXED = $(COMPILE_TO_TEST) $(FCfixed) -I$(DSTAR_INC)
 
 %.o:%.f
