--- a/NScool/make/makefile
+++ b/NScool/make/makefile
@@ -1,7 +1,7 @@
 include $(MESA_DIR)/utils/makefile_header
 
 LIB = libnscool.a
-LIB_OBJS = NScool_def.o NScool_private_def.o NScool_storage.o NScool_init.o NScool_crust_tov.o NScool_ctrls_io.o NScool_create_model.o NScool_evolve.o NScool_lib.o
+LIB_OBJS = NScool_def.o NScool_private_def.o NScool_storage.o NScool_init.o NScool_crust_tov.o NScool_ctrls_io.o NScool_create_model.o NScool_evolve.o NScool_profile.o NScool_lib.o
 
 VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
 DSTAR_INC=../../include
