--- a/dStar_atm/test/make/makefile
+++ b/dStar_atm/test/make/makefile
@@ -1,13 +1,14 @@
 include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_INC=../../../include
-DSTAR_LIB=../../../lib
+DSTAR_LIB_DIR=../../../lib
 
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -ldstar_atm
-LOAD_OTHER = -L$(DSTAR_LIB) -lconstants -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
+
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lconductivity -lneutrino -lconstants -ldstar_eos -lsuperfluid  -lnucchem -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
 
 TEST = tester
-TEST_OBJS = test_atm.o
+TEST_OBJS = test_bc09.o #test_atm.o
 
 default: install
 
