--- a/examples/basic_run/make/makefile
+++ b/examples/basic_run/make/makefile
@@ -1,7 +1,7 @@
 include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = /path/to/dStar/lib
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_crust -lsuperfluid -lconductivity -lneutrino -ldstar_eos -ldstar_atm -lnucchem -lconstants -lnscool -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lnscool -ldstar_crust -lsuperfluid -lconductivity -lneutrino -ldstar_eos -ldstar_atm -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
 DSTAR_INC = /path/to/dStar/include
 
 EXEC = run_dStar
