--- a/MRcurve/make/makefile
+++ b/MRcurve/make/makefile
@@ -2,7 +2,7 @@ include $(MESA_DIR)/utils/makefile_header
 
 LIB = libmrcurve.a
 LIB_OBJS = dStar_core_def.o brown_skyrme.o load_skyrme_parameters.o \
-			dStar_core_mod.o dStar_core_tov.o dStar_core_lib.o
+			dStar_core_mod.o dStar_core_lib.o dStar_core_tov.o
 
 VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
 DSTAR_INC=../../include
