making preprocessor for abuntime

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ test_abuntime
 tester
 LOGS
 .ipynb_checkpoints
-
+dStar_crust/preprocessor/process_abuntime
+dStar_crust/preprocessor/make/process_abuntime
