--- a/dStar_crust/preprocessor/make/makefile
+++ b/dStar_crust/preprocessor/make/makefile
@@ -1,6 +1,7 @@
 include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = ../../../lib
+LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -ldstar_crust
 LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_eos -lsuperfluid -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
 DSTAR_INC = ../../../include
 
@@ -10,7 +11,10 @@ PREPROCESSOR_OBJS = abuntime.o process_abuntime.o
 default: install
 
 $(PREPROCESSOR) : $(PREPROCESSOR_OBJS)
-	$(LOADER) $(FCopenmp) -o $@ $(PREPROCESSOR_OBJS) $(LOAD_OTHER)
+	$(LOADER) $(FCopenmp) -o $@ $(PREPROCESSOR_OBJS) $(LOAD_LOCAL) $(LOAD_OTHER)
+
+print_abuntime : abuntime.o print_abuntime.o
+	$(LOADER) $(FCopenmp) -o $@ abuntime.o print_abuntime.o $(LOAD_LOCAL) $(LOAD_OTHER)
 
 %.o: $(TEST_SRC_DIR)/%.f
 	$(TEST_COMPILE) $(FCfree) $(FCimpno) -I$(DSTAR_INC) $<
