electron table loader
read in table and cache data

--- a/conductivity/test/make/makefile
+++ b/conductivity/test/make/makefile
@@ -14,7 +14,7 @@ $(TEST) : $(TEST_OBJS)
 	$(LOADER) $(FCopenmp) -o $@ $(TEST_OBJS) $(LOAD_LOCAL) $(LOAD_OTHER)
 
 test_P3_tab: test_P3_tab.o
-	$(LOADER) $(FCopenmp) -o $@ test_P3_tab.o -L$(DSTAR_LIB_DIR) -lconstants -L$(MESA_LIB_DIR) -lconst -lutils $(LOAD_MESA_NUMERICS)
+	$(LOADER) $(FCopenmp) -o $@ test_P3_tab.o $(LOAD_LOCAL) $(LOAD_OTHER)
 
 %.o: $(TEST_SRC_DIR)/%.f
 	$(TEST_COMPILE) $(FCfree) $(FCimpno) -I$(DSTAR_INC) $<
