--- a/superfluid/test/make/makefile
+++ b/superfluid/test/make/makefile
@@ -1,7 +1,8 @@
 include $(MESA_DIR)/utils/makefile_header
 
+DSTAR_LIB_DIR = ../../../lib
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lsuperfluid
-LOAD_OTHER = -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lexceptions -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
 
 TEST = tester
 TEST_OBJS = test_sf.o
