--- a/constants/make/makefile
+++ b/constants/make/makefile
@@ -10,7 +10,7 @@ VPATH = $(MOD_PUBLIC_DIR):$(MOD_PRIVATE_DIR)
 $(LIB): $(LIB_OBJS)
 	$(LIB_TOOL) $(LIB) $(LIB_OBJS)
 
-COMPILE = $(COMPILE_TO_TEST) $(FCfree)
+COMPILE = $(COMPILE_TO_TEST) $(FCfree) -I$(DSTAR_INC)
 
 %.o:%.f
 	$(COMPILE) $<
