--- a/constants/test/make/makefile
+++ b/constants/test/make/makefile
@@ -1,7 +1,9 @@
 include $(MESA_DIR)/utils/makefile_header
 
+DSTAR_LIB_DIR = ../../../lib
+
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lconstants
-LOAD_OTHER = -L$(MESA_LIB_DIR) -lconst -lutils
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lexceptions -L$(MESA_LIB_DIR) -lconst -lutils
 
 TEST = tester
 TEST_OBJS = test_constants.o
