added exceptions library to testing

--- a/dStar_atm/test/make/makefile
+++ b/dStar_atm/test/make/makefile
@@ -5,7 +5,7 @@ DSTAR_LIB_DIR=../../../lib
 
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -ldstar_atm
 
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lconductivity -lneutrino -lconstants -ldstar_eos -lsuperfluid  -lnucchem -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lconductivity -lneutrino -lconstants -ldstar_eos -lsuperfluid  -lnucchem -lexceptions -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
 
 TEST = tester
 TEST_OBJS = test_atm.o #test_bc09.o
