tabulated electron thermal conductivity
added routine to make  tables in rho-T space for comparison.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ conductivity/test/make/test_P3_tab
 conductivity/test/test_P3_tab
 conductivity/test/P3_pcy_tab_output
 conductivity/test/P3_tab_output
+tabulate_conductivity
