cleaned up conductivity tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,20 +18,12 @@ test_log
 tester
 LOGS
 .ipynb_checkpoints
-
-
 dStar_crust/data/rp03_isos
-
 dStar_crust/data/rp03_summary
-
 dStar_crust/data/rp03.bin
-
 dStar_eos/data/helm_table.dat
-
 nucchem/data/nuclib_db
 condall06.dat
-conductivity/test/make/test_P3_tab
-conductivity/test/test_P3_tab
-conductivity/test/P3_pcy_tab_output
-conductivity/test/P3_tab_output
 tabulate_conductivity
+test_tabulated_mixture
+
