testing of mixtures with tabulated conductivity

--- a/conductivity/test/make/makefile
+++ b/conductivity/test/make/makefile
@@ -8,7 +8,7 @@ DSTAR_INC = ../../../include
 TEST = tester
 TEST_OBJS = test_cond.o
 
-EXPERIMENTAL = tabulate_conductivity test_tabulated_mixture
+EXPERIMENTAL = tabulate_conductivity test_tabulated_mixture tabulate_mixture
 
 default: install
 
@@ -19,6 +19,9 @@ tabulate_conductivity: tabulate_conductivity.o
 	$(LOADER) $(FCopenmp) -o $@ $< $(LOAD_LOCAL) $(LOAD_OTHER)
 
 test_tabulated_mixture: test_tabulated_mixture.o
+	$(LOADER) $(FCopenmp) -o $@ $< $(LOAD_LOCAL) $(LOAD_OTHER)
+
+tabulate_mixture: tabulate_mixture.o
 	$(LOADER) $(FCopenmp) -o $@ $< $(LOAD_LOCAL) $(LOAD_OTHER)
 
 %.o: $(TEST_SRC_DIR)/%.f
