latest version of condtab

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ dStar_crust/data/rp03.bin
 dStar_eos/data/helm_table.dat
 nucchem/data/nuclib_db
 condall06.dat
+condtab.dat
 tabulate_conductivity
 test_tabulated_mixture
-
 tabulate_mixture
 conductivity/test/inlist
