added exceptions lib to examples

--- a/examples/basic_MRcurve/make/makefile
+++ b/examples/basic_MRcurve/make/makefile
@@ -1,7 +1,7 @@
 include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = /path/to/dStar/lib
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_crust -lconductivity -lneutrino -ldstar_eos -lsuperfluid -ldstar_atm -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERIC)
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_crust -lconductivity -lneutrino -ldstar_eos -lsuperfluid -ldstar_atm -lnucchem -lconstants -lexceptions -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERIC)
 DSTAR_INC = /path/to/dStar/include
 
 EXEC = run_MRcurve
