--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ dStar_crust/data/rp03_summary
 dStar_crust/data/rp03.bin
 dStar_eos/data/helm_table.dat
 nucchem/data/nuclib_db
+condall06.dat
+condtab.dat
+tabulate_conductivity
+test_tabulated_mixture
+tabulate_mixture
+conductivity/test/inlist
