--- a/dStar_crust/preprocessor/make/makefile
+++ b/dStar_crust/preprocessor/make/makefile
@@ -2,14 +2,17 @@ include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = ../../../lib
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -ldstar_crust
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_eos -lsuperfluid -lnucchem -lconstants -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -ldstar_eos -lsuperfluid -lnucchem -lconstants -lexceptions -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
 DSTAR_INC = ../../../include
 
+HZ90_GENERATOR = generate_HZ90
+HZ90_GENERATOR_OBJS = comp_cache.o generate_HZ90.o
+
 PREPROCESSOR = process_abuntime
-PREPROCESSOR_OBJS = abuntime.o process_abuntime.o
+PREPROCESSOR_OBJS = abuntime.o comp_cache.o process_abuntime.o
 
 PRINTER = print_abuntime
-PRINTER_OBJS = abuntime.o print_abuntime.o
+PRINTER_OBJS = comp_cache.o print_abuntime.o
 
 default: install
 
@@ -19,11 +22,14 @@ $(PREPROCESSOR) : $(PREPROCESSOR_OBJS)
 $(PRINTER) : $(PRINTER_OBJS)
 	$(LOADER) $(FCopenmp) -o $@ $(PRINTER_OBJS) $(LOAD_LOCAL) $(LOAD_OTHER)
 
+$(HZ90_GENERATOR): $(HZ90_GENERATOR_OBJS)
+	$(LOADER) $(FCopenmp) -o $@ $(HZ90_GENERATOR_OBJS) $(LOAD_LOCAL) $(LOAD_OTHER)
+
 %.o: $(TEST_SRC_DIR)/%.f
 	$(TEST_COMPILE) $(FCfree) $(FCimpno) -I$(DSTAR_INC) $<
 
-install: $(PREPROCESSOR) $(PRINTER)
-	cp $(PREPROCESSOR) $(PRINTER) ..
+install: $(PREPROCESSOR) $(PRINTER) $(HZ90_GENERATOR)
+	cp $(PREPROCESSOR) $(PRINTER) $(HZ90_GENERATOR) ..
 
 clean:
-	-@rm -f *.o *.mod $(PREPROCESSOR)
+	-@rm -f *.o *.mod $(PREPROCESSOR) $(PRINTER) $(HZ90_GENERATOR)
