renamed print_abuntime to print_composition
since HZ90, abuntime files now treated on a similar basis

--- a/dStar_crust/preprocessor/make/makefile
+++ b/dStar_crust/preprocessor/make/makefile
@@ -11,8 +11,8 @@ HZ90_GENERATOR_OBJS =  HZ90_comp.o composition_handler.o generate_HZ90.o
 PREPROCESSOR = process_abuntime
 PREPROCESSOR_OBJS = abuntime.o composition_handler.o HZ90_comp.o process_abuntime.o
 
-PRINTER = print_abuntime
-PRINTER_OBJS = composition_handler.o print_abuntime.o
+PRINTER = print_composition
+PRINTER_OBJS = composition_handler.o print_composition.o
 
 default: install
 
