cleanup of preprocessor files

--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,14 @@ test_abuntime
 tester
 LOGS
 .ipynb_checkpoints
-dStar_crust/preprocessor/process_abuntime
-dStar_crust/preprocessor/make/process_abuntime
-dStar_crust/preprocessor/print_composition
-dStar_crust/preprocessor/make/print_abuntime
-dStar_crust/preprocessor/generate_HZ90
-dStar_crust/preprocessor/make/generate_HZ90
+process_abuntime
+print_composition
+generate_HZ90
 dStar_crust/data/*_isos
 dStar_crust/data/*_summary
 dStar_crust/data/*.bin
+dStar_crust/data/*.zip
+dStar_crust/data/net_*
 dStar_eos/data/helm_table.dat
 nucchem/data/nuclib_db
 condall06.dat
