added test of tov eqn
checking that density is monotonic—it appears to be; problem may be in setting up zonal averages.

--- a/NScool/test/make/makefile
+++ b/NScool/test/make/makefile
@@ -16,6 +16,9 @@ $(TEST) : $(TEST_OBJS)
 test_args: test_argparse.o
 	$(LOADER) $(FCopenmp) -o $@ test_argparse.o $(LOAD_LOCAL) $(LOAD_OTHER)
 
+test_NScool_tov: test_NScool_tov.o
+	$(LOADER) $(FCopenmp) -o $@ test_NScool_tov.o $(LOAD_LOCAL) $(LOAD_OTHER)
+
 %.o: $(TEST_SRC_DIR)/%.f
 	$(TEST_COMPILE) $(FCfree) $(FCimpno) -I$(DSTAR_INC) $<
 
