added analyze_crust program
routine to print out crust table: densities & compositions

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ tabulate_conductivity
 test_tabulated_mixture
 tabulate_mixture
 conductivity/test/inlist
+analyze_crust
+dStar_crust/test/*-table
+
