--- a/neutrino/test/make/makefile
+++ b/neutrino/test/make/makefile
@@ -2,7 +2,7 @@ include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = ../../../lib
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -lneutrino 
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lsuperfluid -lnucchem  -lconstants -lexceptions -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lsuperfluid -lnucchem  -lconstants -lexceptions -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils $(LOAD_MESA_NUMERICS)
 DSTAR_INC = ../../../include
 
 TEST = tester
