--- a/dStar_eos/test/make/makefile
+++ b/dStar_eos/test/make/makefile
@@ -2,7 +2,7 @@ include $(MESA_DIR)/utils/makefile_header
 
 DSTAR_LIB_DIR = ../../../lib
 LOAD_LOCAL = -L$(LOCAL_LIB_DIR) -ldstar_eos
-LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lexceptions -lsuperfluid -lnucchem  -lconstants -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils
+LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lexceptions -lsuperfluid -lnucchem  -lconstants -L$(MESA_LIB_DIR) -linterp_1d -lconst -lutils -lmath $(LOAD_CRMATH)
 DSTAR_INC = ../../../include
 
 TEST = tester
