--- a/examples/accretion/make/makefile
+++ b/examples/accretion/make/makefile
@@ -1,8 +1,12 @@
 include $(MESA_DIR)/utils/makefile_header
 
-DSTAR_LIB_DIR = /path/to/dStar/lib
+ifndef DSTAR_DIR
+$(error DSTAR_DIR environment variable is not set)
+endif
+
+DSTAR_LIB_DIR = $(DSTAR_DIR)/lib
 LOAD_OTHER = -L$(DSTAR_LIB_DIR) -lnscool -ldstar_crust -lsuperfluid -lconductivity -lneutrino -ldstar_eos -ldstar_atm -lnucchem -lconstants -lexceptions -L$(MESA_LIB_DIR) $(LOAD_MESA_NUMERICS)
-DSTAR_INC = /path/to/dStar/include
+DSTAR_INC = $(DSTAR_DIR)/include
 
 EXEC = run_dStar
 EXEC_OBJS = run.o
